# FLEX

./: .gitignore  FLEX.podspec  FLEX_private_hmap.hmap  FLEX_public_hmap.hmap  README.md  generate_xcframework.sh
Classes/Network/PonyDebugger/: FLEXNetworkObserver.m
Example/: .bazelrc  BUILD.bazel  Gemfile  Podfile  WORKSPACE  bazel-Example  bazel-bin  bazel-out  bazel-testlogs
Example/FLEXample/Supporting Files/: Info.plist
Example/FLEXample/SupportingFiles/: Info.plist
FLEX.xcframework/: Info.plist
FLEX.xcframework/ios-arm64/FLEX.framework/: FLEX  Info.plist
FLEX.xcframework/ios-arm64_x86_64-simulator/FLEX.framework/: Info.plist
FLEX.xcframework/ios-arm64_x86_64-simulator/FLEX.framework/_CodeSignature/: CodeResources
FLEX.xcodeproj/: project.pbxproj
